--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
     <com.mindev.mindev_pdfviewer.MindevPDFViewer
         android:id="@+id/pdf"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:pdf_animation="true"
-        app:pdf_direction="horizontal"
-        android:layout_height="match_parent" />
+        app:pdf_direction="horizontal" />
 
     <TextView
         android:id="@+id/tv"
